<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bubbles Match</string>
    <string name="play">Play</string>
    <string name="help">Help</string>
    <string name="score">Score</string>
    <string name="level">Level</string>
    <string name="levelone">Level 1</string>
    <string name="leveltwo">Level 2</string>
    <string name="levelthree">Level 3</string>
    <string name="levelfour">Level 4</string>
    <string name="levelfive">Level 5</string>
    <string name="levelsix">Level 6</string>
    <string name="vide">0</string>
    <string name="bestscore">Best Scores</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="celebrate">Congratulation! you make a new high score.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
 
    
    <string name="replayContent">Would you like to re-play ?</string>
    <string name="recover">Would you like to recover your old Game ?</string>
    <string name="next">Next Level</string> 
    <string name="keep">Continue</string>
    <string name="load">Recovery</string>
    <string name="rules">Rules ?</string>
    <string name="how">How to Play?</string>
    <string name="rulescontent">You only win, when you got a score higher than the minimal score of the current level and this of course while respecting the attributed time to each level. </string>
    <string name="howcontent">The objective of the game is to destroy the same colored bubbles by clicking the connection point between the bubbles. This connection point must be an empty box</string>

</resources>