<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgnew"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hm.roadtogame.bubblesmatch.Launcher" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo" />
    </LinearLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="left" >

            <Button
                android:id="@+id/playBtn"
                style="@style/StyleBtn"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:background="@drawable/customplaybtn"
                android:text="@string/play" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="right" >

            <Button
                android:id="@+id/helpBtn"
                style="@style/StyleBtn"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:background="@drawable/customhelpbtn"
                android:text="@string/help" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left" >

            <Button
                android:id="@+id/scoreBtn"
                style="@style/StyleBtn"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:background="@drawable/customscorebtn"
                android:text="@string/score" />
        </TableRow>
    </TableLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right" >

        <Button
            android:id="@+id/soundBtn"
            android:layout_width="32dp"
            android:layout_height="22dp"
            android:background="@drawable/sound" />
    </TableRow>

</LinearLayout>